# MinionsLLM

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: main.yml  mypy.yml
agent_control/simulation/: __init__.py
code_tools/: requirements.txt
code_tools/darglint/: check.sh
codetools/: read_project_parts.sh
codetools/mypy/: mypy.ini
codetools/pyflakes/: check.sh
control_layer/: __init__.py
control_layer/simulation/: README.md  __init__.py  run_simulation.py
data_grammar/: __init__.py  dataset_generator.py
data_grammar/dataset_generation/: __init__.py  api_gen_dataset_a.py  api_gen_dataset_b.py  enrich_dataset.py  sys_prompt.py
data_grammar/datasets/: enriched_test_dataset.json  test_dataset.json  unfiltered_dataset_b.json
data_grammar/grammar_gen/: __init__.py  compare_trees.py  grammar_config.py  int_to_list.py  list_to_trees.py  node_translations.py  tree_to_prompt.py
data_grammar/rlhf_generation/: __init__.py  dataset_path  rlhf_agent.py  rlhf_agent_unified.py  rlhf_unified.py
examples/: bt_prompting.py  simulate_environment.py  test.xml
examples/01_interface_prompting_examples/: generated_behavior_tree.xml  llamacpp_example.py  ollama_example.py  saving_tree.py
examples/02_simulation_examples/: collect.xml  simulate_environment.py
examples/03_data_gen_examples/: basic_dataset_generation.py  custom_grammar_gen.py  filtered_dataset_generation.py  mixed_gen.py  rlhf_dataset_gen.py
examples/04_experimental_setup_example/: compute_metrics.py  generate_datasets.py  run_experiment.py  upload_dataset.py
examples/data_gen_examples/: basic_dataset_generation.py  custom_grammar_gen.py  filtered_dataset_generation.py
examples/interface_prompting/: llamacpp_example.py  ollama_example.py  saving_tree.py
llm_interface/: __init__.py  layer_LLM.py
llm_interface/prompt_techniques/: bt_4.xml  one_shot_learning.xml  system_prompt.xml  two_shot_learning.xml  zero_shot_learning.xml
llm_layer/: __init__.py  layer_LLM.py
parser_layer/: __init__.py  agent_doc_parser.py  base_nodes.py  grammar_validator.py  middle_parser.py  primitives_validator.py
tests/: filter_dataset.ipynb  primitives_validator_test.py  rag_test.py  structure_tests.py  test_unified_llm.py
tree_parser/: __init__.py  agent_doc_parser.py  grammar_validator.py  middle_parser.py
(+282 files in other folders)
